@@ -23,6 +23,8 @@ debhelper (8.1.0) UNRELEASED; urgency=low
   * dh: Inhibit logging when an override target runs the overridden command,
     to avoid unexpected behavior if the command succeeded but the overall
     target fails. Closes: #601037
+  * Fix deprecated command list on translated debhelper(7) man pages.
+    Closes: #601204
 
  -- Joey Hess <joeyh@debian.org>  Sat, 07 Aug 2010 11:27:24 -0400
 
